--- a/index.html
+++ b/index.html
@@ -3,17 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#313647">
     <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="styles/tailwind.css">
     <title>PWA Cámara</title>
 </head>
-<body>
-    <button id="openCamera">Usar cámara</button>
-    <button id="switchCamera">Cambiar cámara</button>
-    <button id="takePhoto">Tomar foto</button>
-    <video id="video" width="320" height="240" autoplay></video>
-    <canvas id="canvas" width="320" height="240"></canvas>
-    <div id="gallery" style="display:flex;overflow-x:auto;gap:8px;margin-top:12px;"></div>
+<body class="min-h-screen text-ink-50 font-sans antialiased">
+    <main class="mx-auto w-full max-w-4xl px-6 py-12 space-y-8">
+        <header class="space-y-3 text-center">
+            <h1 class="text-3xl font-semibold leading-tight">PWA Cámara</h1>
+        </header>
+
+        <section class="rounded-3xl border border-ink-200 bg-ink-800 p-6 shadow-xl space-y-10">
+            <div class="relative overflow-hidden rounded-2xl border border-ink-200 bg-ink-900">
+                <video id="video" class="w-full aspect-video object-cover" playsinline autoplay muted></video>
+                <span class="absolute top-3 right-3 rounded-full bg-ink-50 px-3 py-1 text-xs font-medium text-ink-900 shadow-sm">En vivo</span>
+            </div>
+
+            <div class="space-y-4">
+                <div class="flex flex-wrap gap-3">
+                    <button id="openCamera" class="inline-flex items-center justify-center rounded-xl bg-ink-200 px-4 py-3 text-sm font-semibold text-ink-900 transition duration-200 hover:bg-ink-50 hover:text-ink-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-ink-50">Usar cámara</button>
+                    <button id="switchCamera" class="inline-flex items-center justify-center rounded-xl border border-ink-200 bg-ink-800 px-4 py-3 text-sm font-medium text-ink-50 transition duration-200 hover:bg-ink-200 hover:text-ink-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-ink-50">Cambiar cámara</button>
+                    <button id="takePhoto" class="inline-flex items-center justify-center rounded-xl border border-ink-200 bg-ink-50 px-4 py-3 text-sm font-semibold text-ink-900 transition duration-200 hover:bg-ink-200 hover:text-ink-900 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-ink-50">Tomar foto</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="space-y-4">
+            <div class="flex items-center justify-between">
+                <h2 class="text-lg font-semibold text-ink-50">Galería</h2>
+                <span class="text-xs text-tone-muted">Tus capturas recientes</span>
+            </div>
+
+            <div class="rounded-2xl border border-dashed border-ink-200 bg-ink-900 p-4 space-y-3">
+                <div id="gallery" class="flex gap-3 overflow-x-auto"></div>
+            </div>
+        </section>
+    </main>
+
+    <canvas id="canvas" class="hidden" width="320" height="240"></canvas>
+
     <script src="app.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
