feat: add video dimension synchronization and update video container styling

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </header>
 
         <section class="rounded-3xl border border-ink-200 bg-ink-800 p-6 shadow-xl space-y-10">
-            <div class="relative overflow-hidden rounded-2xl border border-ink-200 bg-ink-900">
-                <video id="video" class="w-full aspect-video object-cover" playsinline autoplay muted></video>
+            <div id="videoContainer" class="relative overflow-hidden rounded-2xl border border-ink-200 bg-ink-900">
+                <video id="video" class="w-full object-cover" playsinline autoplay muted></video>
                 <span class="absolute top-3 right-3 rounded-full bg-ink-50 px-3 py-1 text-xs font-medium text-ink-900 shadow-sm">En vivo</span>
             </div>
 
