fix: add sync for different devices

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
     </main>
 
-    <canvas id="canvas" class="hidden" width="320" height="240"></canvas>
+    <canvas id="canvas" class="hidden"></canvas>
 
     <script src="app.js"></script>
     <script>
